add gift section

--- a/src/assets/scss/components/_list.scss
+++ b/src/assets/scss/components/_list.scss
@@ -25,6 +25,14 @@
 			padding-left: 0.5em;
 		}
 
+		&.gifts {
+			li {
+				list-style: none;
+				display: inline-block;
+				width: 50%;
+			}
+		}
+
 		&.alt {
 			list-style: none;
 			padding-left: 0;
